0.6
    moving lgpl licensed file into own submodule graphhopper-tools-lgpl
    renaming of Tarjans algorithm class to TarjansSCCAlgorithm
    more strict naming for Weighting enforced and more strict matching to select Weighting (equals check), #490
    specify the preferred-language for way names during graph import (ISO 639-1 or ISO 639-2)

0.5
    Several names have changed see #466, #467, #468
    GraphHopper.optimize removed use postProcessing instead
    method GraphHopper.getGraph() changed to getGraphHopperStorage()
    the interface GraphStorage does no longer extend from the Graph interface. Use GraphHopperStorage (which implements the Graph interface via the base graph) or only Graph instead
    now it is necessary to call baseGraph/chGraph.freeze in order to use the chGraph (to simply determine when an edgeId is a shortcut)    
    LevelGraphStorage is now a GraphHopperStorage with an additional ch graph (CHGraphImpl)
    GraphHopperStorage implements now the Graph interface and delegates all necessary methods to the underlying base graph. To do routing you call getGraph(CHGraph.class or Graph.class) where the parameter Graph.class returns the base graph and the behaviour is identical to GraphHopperStorage itself
    renamed LevelGraph* to CHGraph*
    renamed NoGraphExtension to NoOpExtension
    removed visitedNodes method in GraphHopper replaced with per response information: response.getHints().getLong("visited_nodes.sum", 0)
    added ability to store hints in GHResponse which will be forwarded to the json too
    breaking change in HTTP API: error JSON format changed to be message:"" instead of within info.errors, see updated api documentation
    made GHResponse.getMillis, Path.getMillis, GPXEntry.getMillis deprecated, use getTime instead
    in AbstractFlagEncoder, parse*() and getStr() are now deprecated, use properties.get* instead

0.4
    translation key turn changed and merged with left etc into turn_left, turn_right etc