@@ -3,6 +3,8 @@
     renaming of Tarjans algorithm class to TarjansSCCAlgorithm
     more strict naming for Weighting enforced and more strict matching to select Weighting (equals check), #490
     specify the preferred-language for way names during graph import (ISO 639-1 or ISO 639-2)
+    renaming of getCHWeighting to getCHWeightings due to supporting multiple CH weightings, #623
+    deprecation of setCHWeighting, please use setCHWeightings instead, #623
 
 0.5
     Several names have changed see #466, #467, #468
